# cpp_prac_work

./: CMakeLists.txt  main.cpp
